components/ua/mailchimp-webhooks/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailchimp-webhooks
spec:
  template:
    spec:
      containers:
        - name: mailchimp-webhooks
          # version: 4.0.0
          image: ghcr.io/isisbusapps/mailchimp-webhooks:4.0.0
